--- a/index.html
+++ b/index.html
@@ -262,9 +262,28 @@
             </div>
           </section>
     </main>
-    <!-- footer -->
     <footer>
-
+          <!-- footer -->
+          <div class="d-lg-flex footer">
+            <div class="about">
+              <h5>Download Now</h5>
+              <h5>Licence</h5>
+              <ul class="py-4 d-flex list-unstyled">
+                <li class="me-3">About</li>
+                <li class="me-3">Features</li>
+                <li class="me-3">Pricing</li>
+                <li class="me-3">Careers</li>
+                <li class="me-3">Help</li>
+                <li class="me-3">Privacy Policy</li>
+              </ul>
+              <p> &copy; 2023 All rights reserved</p>
+            </div>
+            <div class="ms-auto icon">
+              <h2>Get the App</h2>
+              <img src="images/android.png" alt="">
+              <img src="images/ios.png" alt="">
+            </div>
+          </div>
     </footer>
 
 
